2009-06-25  Martin Leidig  <mleidig@schlund.de>

	Fixed HTTP caching header problem: adding custom HTTP headers using
	SPDocument.addResponseHeader caused that the "Cache-Control" and
	"Expires" headers weren't set. Now these headers are always set if
	they were not overridden by the application.

2009-06-24  Martin Leidig  <mleidig@schlund.de>

	Re-added support for adding literal Apache configuration in the server
	context (formerly known as "extendvedhost" now it can be found under
	http-server/literal-server).

2009-06-24  Martin Leidig  <mleidig@schlund.de>

	Added support for relative resolving of xincluded Pustefix
	property files.

2009-06-08  Martin Leidig  <mleidig@schlund.de>

	Added support for inserting additional shared folders into
	the dynamic include fallback chain right before the common
	folder. Thus applications can already be modularized in a
	way appropriate for 0.14 single project applications.
	The common fallback chain can be extended by placing the
	property file common-override.conf in projects/common/conf
	and adding the line of the following format:
	myproject = common_first_dir, common_second_dir, ...

2009-06-08  Martin Leidig  <mleidig@schlund.de>

	Optimized MD5 checksum creation for rendered HTML by using
	DigestOutputStream.
	
	Fixed NPE in trailinfo logging.

2009-06-08  Martin Leidig  <mleidig@schlund.de>

	Added RenderOutputListener support (output creation notification, 
	e.g. can be used for external content analysis). A listener has 
	to implement the according interface and can be configured using 
	a global property:
	<prop name="de.schlund.pfixxml.RenderOutputListener">mypackage.MyListener</prop>

2009-05-25  Martin Leidig  <mleidig@schlund.de>

	Fixed pfx:isVisible behaviour for non-existing pages: now -1 is
	returned again (instead of 1). Because looking if a page is configured
	doesn't mean that it is not existing (since we support static pages
	without context configuration), we additionally check if a target