@@ -1,3 +1,8 @@
+2009-06-26  Martin Leidig  <mleidig@schlund.de>
+
+	Fixed "too many open files" problem when using the standard
+	JarURLconnection by providing an own implementation.
+
 2009-06-25  Martin Leidig  <mleidig@schlund.de>
 
 	Fixed HTTP caching header problem: adding custom HTTP headers using
